# glib

./: .clang-format  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lcovrc  .mailmap  .organizationmap  .travis.yml  ABOUT-NLS  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.pre-1-2  ChangeLog.pre-2-0  ChangeLog.pre-2-10  ChangeLog.pre-2-12  ChangeLog.pre-2-2  ChangeLog.pre-2-4  ChangeLog.pre-2-6  ChangeLog.pre-2-8  HACKING  INSTALL  INSTALL.in  INSTALL.md  MAINTAINERS  Makefile.am  Makefile.decl  Makefile.glib  NEWS  README  README.in  README.md  README.win32  README.win32.md  SECURITY.md  TAGS.inc  (+233 more)
cmph/: README-CMPH-IMPORT.txt  bdz.c  bdz.h  bdz_gen_lookup_table.c  bdz_ph.c  bdz_ph.h  bdz_structs.h  bdz_structs_ph.h  bitbool.h  bmz.c  bmz.h  bmz8.c  bmz8.h  bmz_structs.h  brz.c  brz.h  buffer_entry.c  chd.c  chd.h  chd_ph.c  chd_ph.h  chd_structs.h  chm.c  chm.h  cmph.c  cmph.h  cmph_structs.c  cmph_structs.h  cmph_time.h  cmph_types.h  compressed_rank.c  compressed_rank.h  compressed_seq.c  djb2_hash.h  fch.c  fch.h  fch_buckets.c  fch_buckets.h  fch_structs.h  graph.c  (+11 more)
docs/: .cvsignore  CODE-OWNERS  CODEOWNERS  Changes-2.0.txt  Makefile.am  backports.md  debugging.txt  defintions.sgml  g-ir-compiler.1  g-ir-generate.1  gcache.sgml  ghash.sgml  glib-config.1  glib.sgml  glist.sgml  gmem.sgml  gtimer.sgml  gtree.sgml  issue-and-merge-request-management.md  macros.md  macros.txt  meson-version.md  releasing.md  roadmap.md  rust-migration.md  supported-platforms.md  testing.md  toolchain-requirements.md  win32-build.md
fuzzing/: README.md  driver.c  fuzz.h  fuzz_bookmark.c  fuzz_bookmark.cc  fuzz_canonicalize_filename.c  fuzz_data_input_stream_read_line.c  fuzz_data_input_stream_read_line_utf8.c  fuzz_data_input_stream_read_upto.c  fuzz_date_parse.c  fuzz_date_time_new_from_iso8601.c  fuzz_dbus_message.c  fuzz_dbus_message.cc  fuzz_dbus_node_info_new_for_xml.c  fuzz_filename_from_uri.c  fuzz_filename_to_uri.c  fuzz_get_locale_variants.c  fuzz_inet_address_mask_new_from_string.c  fuzz_inet_address_new_from_string.c  fuzz_inet_socket_address_new_from_string.c  fuzz_key.c  fuzz_key.cc  fuzz_markup_escape_text.c  fuzz_network_address_parse.c  fuzz_network_address_parse_uri.c  fuzz_paths.c  fuzz_resolver.c  fuzz_special_dirs.c  fuzz_string.c  fuzz_uri_escape.c  fuzz_uri_parse.c  fuzz_uri_parse_params.c  fuzz_utf8_normalize.c  fuzz_utf8_validate.c  fuzz_uuid_string_is_valid.c  fuzz_variant_binary.c  fuzz_variant_binary.cc  fuzz_variant_binary_byteswap.c  fuzz_variant_text.c  fuzz_variant_text.cc  (+2 more)
gio/: .gitignore  ChangeLog  Makefile.am  abicheck.sh  build_mkenum.py  common.h  data-to-c.c  data-to-c.pl  data-to-c.py  dbus-daemon.xml  dfi-reader.c  dfi-reader.h  gaction.c  gaction.h  gactiongroup.c  gactiongroup.h  gactiongroupexporter.c  gactiongroupexporter.h  gactionmap.c  gactionmap.h  gappinfo.c  gappinfo.h  gappinfoprivate.h  gapplication-tool.c  gapplication.c  gapplication.h  gapplicationcommandline.c  gapplicationcommandline.h  gapplicationimpl-dbus-interface.c  gapplicationimpl-dbus.c  gapplicationimpl.h  gasynchelper.c  gasynchelper.h  gasyncinitable.c  gasyncinitable.h  gasyncresult.c  gasyncresult.h  gbase64decoder.c  gbase64decoder.h  gbase64encoder.c  (+623 more)
gircompiler/: compiler.c  girmodule-private.h  girmodule.c  girnode-private.h  girnode.c  giroffsets.c  girparser.c  meson.build
girepository/: cmph-bdz-test.c  docs.c  gdump.c  gi-dump-types.c  giarginfo.c  giarginfo.h  gibaseinfo-private.h  gibaseinfo.c  gibaseinfo.h  giboxedinfo.c  giboxedinfo.h  gicallableinfo.c  gicallableinfo.h  gicallbackinfo.c  gicallbackinfo.h  giconstantinfo.c  giconstantinfo.h  gienuminfo.c  gienuminfo.h  gifieldinfo.c  gifieldinfo.h  giflagsinfo.c  giflagsinfo.h  gifunctioninfo.c  gifunctioninfo.h  giinterfaceinfo.c  giinterfaceinfo.h  ginvoke.c  giobjectinfo.c  giobjectinfo.h  gipropertyinfo.c  gipropertyinfo.h  giregisteredtypeinfo.c  giregisteredtypeinfo.h  girepository-autocleanups.h  girepository-private.h  girepository.c  girepository.h  girffi.c  girffi.h  (+37 more)
gitypelib/: gitypelib-private.h  gitypelib.c  gitypelib.h  gitypes.h  gthash-test.c  gthash.c  meson.build
glib/: .cvsignore  .gitignore  Makefile.am  abicheck.sh  docs.c  galloca.h  garcbox.c  garray.c  garray.h  garraylist.c  garraylist.h  gasyncqueue.c  gasyncqueue.h  gasyncqueueprivate.h  gatomic-gcc.c  gatomic.c  gatomic.h  gatomicarray-private.h  gatomicarray.c  gbacktrace.c  gbacktrace.h  gbase64.c  gbase64.h  gbitlock.c  gbitlock.h  gbookmarkfile.c  gbookmarkfile.h  gboxed.c  gboxed.h  gbsearcharray.c  gbsearcharray.h  gbuffer.c  gbuffer.h  gbytes.c  gbytes.h  gcache.c  gcache.h  gcharset.c  gcharset.h  gcharsetprivate.h  (+280 more)
gmodule/: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  gmodule-ar.c  gmodule-beos.c  gmodule-deprecated.c  gmodule-dl.c  gmodule-dld.c  gmodule-dyld.c  gmodule-os2.c  gmodule-win32.c  gmodule.c  gmodule.def  gmodule.h  gmodule.rc.in  gmoduleconf.h.in  gmoduleconf.h.win32  libgplugin_a.c  libgplugin_b.c  makefile.mingw.in  makefile.msc.in  meson.build  testgmodule.c
gobject/: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  abicheck.sh  autoptr.c  gatomicarray.c  gatomicarray.h  gbinding.c  gbinding.h  gbindinggroup.c  gbindinggroup.h  gboxed.c  gboxed.h  gbsearcharray.c  gbsearcharray.h  gclosure.c  gclosure.h  genums.c  genums.h  glib-enumtypes.c.template  glib-enumtypes.h.template  glib-genmarshal.1  glib-genmarshal.c  glib-genmarshal.in  glib-mkenums.1  glib-mkenums.in  glib-types.h  gmarshal-list-to-strings.py  gmarshal.c  gmarshal.h  gmarshal.list  gmultibinding.c  gmultibinding.h  gobject-autocleanups.h  gobject-private.h  gobject-query.c  gobject.c  gobject.def  (+47 more)
gthread/: .cvsignore  ChangeLog  Makefile.am  gthread-impl.c  gthread-none.c  gthread-nspr.c  gthread-posix.c  gthread-solaris.c  gthread-win32.c  gthread.c  gthread.def  gthread.rc.in  gthread.symbols  makefile.mingw.in  makefile.msc.in  meson.build  testgthread.c
m4macros/: .gitignore  Makefile.am  glib-2.0.m4  glib-gettext.m4  gsettings.m4  meson.build
(+1897 files in other folders)
